# nexusmods-new-mod-notifier

./: .gitignore  README.md  create_service.py  main.py  pyproject.toml
