[tool.poetry]
name = "new-mods"
version = "0.2.0"
description = ""
authors = ["Nachtalb <na@nachtalb.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
pygments = "^2.16.1"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
ruff-lsp = "^0.0.39"
mypy = "^1.5.1"
isort = "^5.12.0"
types-tabulate = "^0.9.0.3"
ipdb = "^0.13.13"
ipython = { extras = ["black"], version = "^8.15.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
show_error_codes = true
pretty = true
strict = true
